# Shader_Story

./: .gitignore  CMakeLists.txt  main.cpp  readme.md
engine/: CMakeLists.txt  CTestTestfile.cmake  cmake_install.cmake  engine.cpp  engine.hpp
engine/common/: events.hpp  macros.h  uid_alloc.cpp  uid_alloc.hpp
engine/component/: base_component.cpp  base_component.hpp  camera.cpp  camera.hpp  lights.cpp  lights.hpp  observer.hpp  tickable.hpp
engine/core/: math.hpp  semaphore.cpp  semaphore.hpp
engine/runtime/framework/: illumination.cpp  illumination.hpp  ui_manager.cpp  ui_manager.hpp  world_manager.cpp  world_manager.hpp
engine/runtime/global/: global.cpp  global.hpp
engine/runtime/io/: assets_manager.cpp  assets_manager.hpp  input_system.cpp  input_system.hpp  log_system.hpp
engine/runtime/render/: render_base.hpp  render_pipeline.cpp  render_pipeline.hpp  render_resource.cpp  render_resource.hpp  render_swap_data.cpp  render_swap_data.hpp  render_system.cpp  render_system.hpp  shader_types.hpp  vk_macros.h
engine/runtime/render/pass/: composite_pass.cpp  composite_pass.hpp  defered_pass.cpp  defered_pass.hpp  main_camera_pass.cpp  main_camera_pass.hpp  mesh_pass.cpp  mesh_pass.hpp  ssao_pass.cpp  ssao_pass.hpp  sun_pass.cpp  sun_pass.hpp  test_pass.cpp  test_pass.hpp  ui_pass.cpp  ui_pass.hpp
engine/runtime/render/render_resources/: csm_resource.hpp  defered_resource.cpp  defered_resource.hpp  materials.cpp  materials.hpp  sbo.cpp  sbo.hpp  ssao_resource.cpp  ssao_resource.hpp  ubo.cpp  ubo.hpp
engine/runtime/render/rhi/: render_base.hpp
engine/runtime/render/rhi/vulkan/: vk_rhi.cpp  vk_rhi.hpp  vk_setup.cpp  vk_utils.cpp  vk_utils.hpp
engine/runtime/shaders/: mesh.frag  mesh.vert  test.vert
engine/runtime/window/: window_system.cpp  window_system.hpp
engine/shader_story.build/Debug/Engine.build/: Script-39BF16533CAF5DEADBF45236.sh
engine/shader_story.build/Debug/Engine.build/Objects-normal/arm64/: Engine.LinkFileList  assets_manager.d  base_component.d  camera.d  engine.d  global.d  input_system.d  lights.d  log_system.d  main_camera_pass.d  mesh_pass.d  render_pipeline.d  render_resource.d  render_swap_data.d  render_system.d  semaphore.d  sun_pass.d  ui_manager.d  ui_pass.d  uid_alloc.d  vk_rhi.d  vk_setup.d  vk_utils.d  window_system.d  world_manager.d
shaders/: composite.frag  composite.vert  defered.frag  defered.vert  mesh.frag  mesh.vert  ssao.frag  ssao.vert  sun.frag  sun.vert
shaders/include/: common.h  common_data.glsl  setting.h  shadow.glsl  surface_shading.glsl
shaders/lib/: light_debug.frag  light_entity.frag  light_entity.vert  (+2 more)
(+1 files in other folders)
